--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <body>
             <h1>cool_ssg_generator v0.1.0</h1>
             <div class="link-container">
-                <a href="./test with paragraph.html">test with paragraph</a>
-<a href="./test.html">test</a>
-<a href="./deeper dir/anothertestfile.html">anothertestfile</a>
+                <a class="link" href="./test with paragraph.html">test with paragraph</a>
+<a class="link" href="./test.html">test</a>
+<a class="link" href="./deeper dir/anothertestfile.html">anothertestfile</a>
             </div>
             </body>
         </html>    
