--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
                 <meta charset="utf-8">
                 <title>cool_ssg_generator Home Page</title>
                 <link rel="stylesheet" href="public/stylesheet/default.css">
-                <link rel="stylesheet" href=https://example.com/example.css>
-
+                
                 <meta name="viewport" content="width=device-width, initial-scale=1">
             </head>
             <body>
             <h1>cool_ssg_generator v0.1.0</h1>
             <div class="link-container">
-                <a class="link" href="./test with paragraph.html">test with paragraph</a>
-<a class="link" href="./test.html">test</a>
-<a class="link" href="./deeper dir/anothertestfile.html">anothertestfile</a>
+                <a class="link" href="./Silver Blaze.html">Silver Blaze</a>
+<a class="link" href="./The Adventure of the Six Napoleans.html">The Adventure of the Six Napoleans</a>
+<a class="link" href="./The Adventure of the Speckled Band.html">The Adventure of the Speckled Band</a>
+<a class="link" href="./The Naval Treaty.html">The Naval Treaty</a>
+<a class="link" href="./The Red Headed League.html">The Red Headed League</a>
             </div>
             </body>
         </html>    
